--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,17 @@
   color: #61dafb;
 }
 
+.swiper-progress-fill{
+  background: #84673d;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  transform: scale(0);
+  transform-origin: left top;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
