--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,10 @@
   transform-origin: left top;
 }
 
+.swiper{
+  width: 100%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
