--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
   color: #61dafb;
 }
 
-.swiper-progress-fill{
+.swiper-progress-fill {
   background: #84673d;
   position: absolute;
   left: 0;
@@ -39,15 +39,51 @@
   transform-origin: left top;
 }
 
-.swiper{
+.swiper {
   width: 100%;
+}
+
+/*---------------LOGIN------------*/
+.login-image {
+  position: relative;
+  background: #333;
+  display: flex;
+  overflow: hidden;
+  justify-content: center;
+  -ms-perspective: 100px;
+  perspective: 100px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.login-image::before {
+  animation: no-transform 2s .2s cubic-bezier(0, .5, 0, 1) forwards;
+  content: "";
+  position: absolute;
+  opacity: 0;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .8)), url(./assets/images/african_woman.jpg) no-repeat bottom;
+  background-size: cover;
+  transform: translateY(-4rem);
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
 }
 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes no-transform{
+  100%{
+    opacity: 1;
+    transform: none;
   }
 }
