--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@
   content: "";
   position: absolute;
   opacity: 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .8)), url(./assets/images/african_woman.jpg) no-repeat bottom;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .8)), url(./assets/images/african_woman.webp) no-repeat bottom;
   background-size: cover;
   transform: translateY(-4rem);
   left: 0;
